deployfolder/objects/CS_LeadGen__c.object
<CustomObject>
    <label>CS LeadGen</label>
    <nameField>
        <label>CS LeadGen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS LeadGen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>How_many_users_seats__c</fullName>
        <label>How many users/seats?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Archiving</fullName>
                    <default>true</default>
                    <label>Archiving</label>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Rep__c</fullName>
        <label>Support Rep</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_are_they_Interested__c</fullName>
        <label>Why are they Interested?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>